# Bronze_Tiern-PIAIC

./: .env.example  .gitignore  README.md  SECURITY.md  orchestrator.py  pyproject.toml  requirements.txt  setup.ps1
.claude/skills/: daily-briefing.md  process-inbox.md  triage-needs-action.md
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Done/: FILE_client_b_followup_20260510_160407.md  FILE_client_b_followup_20260510_160615.md  FILE_test_1_20260510_160328.md  FILE_test_1_20260510_160328.txt  FILE_test_1_20260510_160615.md  FILE_test_20260510_152750.md  FILE_test_20260510_154242.md  FILE_test_20260510_160615.md  FILE_test_invoice_20260510_151002.md  FILE_test_invoice_20260510_151236.md  FILE_test_invoice_20260510_151236.txt  FILE_test_invoice_20260510_151853.md  FILE_test_invoice_20260510_152724.md  FILE_test_invoice_20260510_154242.md  FILE_test_invoice_20260510_160615.md
AI_Employee_Vault/Inbox/: client_b_followup.txt  test.txt
AI_Employee_Vault/Plans/: PLAN_client_b_followup_20260510.md  PLAN_invoice_client_a_20260510.md
watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py
